# stack-plugin-magicq

./: .gitignore  CMakeLists.txt  README.md
src/: StackMagicQCue.cpp  StackMagicQCue.h  resources.xml
ui/: StackMagicQCue.ui
